--- a/apps/pattern-lab/src/_patterns/04-pages/90-content-hub/anchor-ribbon-example.twig
+++ b/apps/pattern-lab/src/_patterns/04-pages/90-content-hub/anchor-ribbon-example.twig
@@ -120,7 +120,7 @@
 } %}
   
       {% block band_content  %}
-        {% grid "o-bolt-grid--matrix" %}
+        {% grid "o-bolt-grid--large o-bolt-grid--matrix" %}
           {% cell 'u-bolt-width-1/1 u-bolt-width-3/5@medium' %}
             {% include "@bolt/headline.twig" with {
             text: "Automation is a Journey",
@@ -132,7 +132,7 @@
             <p>When you don’t have to waste time feeding the Frankenstack, you can focus on stuff that matters: designing awesome customer experiences. Automating your most complicated processes. Innovating in ways that disrupt the market."</p>
           {% endcell %}
       
-          {% cell "u-bolt-width-1/1 u-bolt-width-1/3@medium" %}
+          {% cell "u-bolt-width-1/1 u-bolt-width-2/5@medium" %}
             {% include "@bolt-components-card/card.twig" with {
               url: "javascript:",
               contentItems: [
@@ -184,7 +184,7 @@
 } %}
   
       {% block band_content  %}
-        {% grid "o-bolt-grid--matrix o-bolt-grid--rev" %}
+        {% grid "o-bolt-grid--large o-bolt-grid--matrix o-bolt-grid--rev" %}
             {% cell 'u-bolt-width-1/1 u-bolt-width-3/5@medium' %}
             {% include "@bolt/headline.twig" with {
             text: "Transformational Results",
@@ -199,7 +199,7 @@
 
             <p>Why? Because Pega’s capabilities are unified on one platform. No duct tape. No wiring a bunch of things together. You think about outcomes from end to end. Your technology should be able to get that end to end work done.</p>
           {% endcell %}
-          {% cell "u-bolt-width-1/1 u-bolt-width-1/3@small" %}
+          {% cell "u-bolt-width-1/1 u-bolt-width-2/5@small" %}
             {% include "@bolt-components-card/card.twig" with {
               url: "javascript:",
               contentItems: [
@@ -251,7 +251,7 @@
 } %}
   
       {% block band_content  %}
-        {% grid "o-bolt-grid--matrix" %}
+        {% grid "o-bolt-grid--large o-bolt-grid--matrix" %}
           {% cell 'u-bolt-width-1/1 u-bolt-width-3/5@medium' %}
             {% include "@bolt/headline.twig" with {
             text: "Give Your Employees a Robot",
@@ -264,7 +264,7 @@
 
             <p>Leveraging productivity bots that simplify the employee experience injects instant ROI into your business. In just two to three weeks you'll turn all your service agents, back-office workers, or front-line sellers into productivity ninjas. They’ll be happier. You’ll be happier. And your customers will be happier.</p>
           {% endcell %}
-          {% cell "u-bolt-width-1/1 u-bolt-width-1/3@medium" %}
+          {% cell "u-bolt-width-1/1 u-bolt-width-2/5@medium" %}
             {% include "@bolt-components-card/card.twig" with {
               url: "javascript:",
               contentItems: [
@@ -317,7 +317,7 @@
 } %}
   
       {% block band_content  %}
-        {% grid "o-bolt-grid--matrix o-bolt-grid--rev" %}
+        {% grid "o-bolt-grid--large o-bolt-grid--matrix o-bolt-grid--rev" %}
           {% cell 'u-bolt-width-1/1 u-bolt-width-3/5@medium' %}
             {% include "@bolt/headline.twig" with {
             text: "Find Improvement Opportunities",
@@ -332,7 +332,7 @@
 
             <p>Because once you know the details, you can act. And that makes all the difference.</p>            
           {% endcell %}
-          {% cell "u-bolt-width-1/1 u-bolt-width-1/3@small" %}
+          {% cell "u-bolt-width-1/1 u-bolt-width-2/5@small" %}
             {% include "@bolt-components-card/card.twig" with {
               url: "javascript:",
               contentItems: [
@@ -384,7 +384,7 @@
 } %}
   
       {% block band_content  %}
-        {% grid "o-bolt-grid--matrix" %}
+        {% grid "o-bolt-grid--large o-bolt-grid--matrix" %}
           {% cell 'u-bolt-width-1/1 u-bolt-width-3/5@medium' %}
             {% include "@bolt/headline.twig" with {
             text: "The Last Mile of Integration",
@@ -397,7 +397,7 @@
 
             <p>Leveraging productivity bots that simplify the employee experience injects instant ROI into your business. In just two to three weeks you'll turn all your service agents, back-office workers, or front-line sellers into productivity ninjas. They’ll be happier. You’ll be happier. And your customers will be happier.</p>
           {% endcell %}
-          {% cell "u-bolt-width-1/1 u-bolt-width-1/3@medium" %}
+          {% cell "u-bolt-width-1/1 u-bolt-width-2/5@medium" %}
             {% include "@bolt-components-card/card.twig" with {
               url: "javascript:",
               contentItems: [
@@ -450,7 +450,7 @@
 } %}
   
       {% block band_content  %}
-        {% grid "o-bolt-grid--matrix o-bolt-grid--rev" %}
+        {% grid "o-bolt-grid--large o-bolt-grid--matrix o-bolt-grid--rev" %}
           {% cell 'u-bolt-width-1/1 u-bolt-width-3/5@medium' %}
             {% include "@bolt/headline.twig" with {
             text: "Ensure Governance and Oversight",
@@ -463,7 +463,7 @@
 
             <p>Capabilities such as auto self-documentation ensure an audit trail is maintained of all activities so compliance risk is minimized and required reporting is streamlined and automated.</p>      
           {% endcell %}
-          {% cell "u-bolt-width-1/1 u-bolt-width-1/3@small u-bolt-margin---small" %}
+          {% cell "u-bolt-width-1/1 u-bolt-width-2/5@small u-bolt-margin---small" %}
             {% include "@bolt-components-card/card.twig" with {
               url: "javascript:",
               contentItems: [
