fix: duplicated meta css

--- a/packages/components/bolt-video/src/video.scss
+++ b/packages/components/bolt-video/src/video.scss
@@ -1,8 +1,6 @@
 @import '@bolt/core';
-@import '@bolt/components-button/src/button.settings';
-@import '@bolt/components-button/src/button.mixins';
-
 @import 'videojs-enhancements';
+@import 'video-meta';
 
 // Same as max-width of wrapper container
 $bolt-video-wrapper--max-width: bolt-breakpoint(xxlarge);
