--- a/packages/components/bolt-video/src/video.scss
+++ b/packages/components/bolt-video/src/video.scss
@@ -12,35 +12,33 @@ $bolt-video-wrapper--max-width: bolt-breakpoint(xxlarge);
   background-color: bolt-color(black); // placeholder color before poster loads up.
 
   &[is-background-video]{
+    @include bolt-margin-right(auto);
+    @include bolt-margin-left(auto);
     flex-grow: 1;
-    z-index: 20;
-    transition: opacity .3s ease, min-height .3s ease;
+    position: absolute;
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
-    margin-left: auto;
-    margin-right: auto;
-    position: absolute;
     min-width: 100%;
     max-width: none;
-    background-color: rgba(22, 26, 60, .8);
     pointer-events: none;
+    background-color: rgba(22, 26, 60, .8);
     opacity: 0;
+    transition: opacity .3s ease, min-height .3s ease;
 
     .is-expanded & {
-      opacity: 1;
       pointer-events: auto;
+      opacity: 1;
     }
 
     .video-js {
-      margin: 0 auto;
-      min-width: 0;
+      @include bolt-margin(0 auto);
       width: 100%;
+      min-width: 0;
+      height: 100%;
       background-color: transparent;
       transition: all .4s ease;
-      width: 100%;
-      height: 100%;
 
       &:not(.vjs-fullscreen) {
         max-width: 1400px;
@@ -56,7 +54,6 @@ $bolt-video-wrapper--max-width: bolt-breakpoint(xxlarge);
   * on Windows
   */
 .c-#{$bolt-namespace}-video {
-
   width: 100%;
   max-width: none;
   z-index: bolt-z-index('tooltip');
