--- a/packages/styleguidekit-assets-bolt/src/sass/scss/03-components/_modal.scss
+++ b/packages/styleguidekit-assets-bolt/src/sass/scss/03-components/_modal.scss
@@ -17,17 +17,18 @@
 	left: 0;
 	z-index: 5;
 	width: 100%;
-	height: 50%;
-	transition: bottom 0.3s ease-out;
+  height: 50%;
+  transform: translate3d(0, 100%, 0);
+  transition: transform 0.3s ease;
 
-	/**
+  /**
      * Active modal
      */
-	&.pl-is-active {
-		display: flex;
-		flex-direction: column;
-		bottom: 0;
-	}
+  &.pl-is-active {
+    display: flex;
+    flex-direction: column;
+    transform: translate3d(0, 0, 0);
+  }
 }
 
 .pl-c-modal__toolbar {
