--- a/apps/pattern-lab/src/_includes/utils/docs.twig
+++ b/apps/pattern-lab/src/_includes/utils/docs.twig
@@ -16,7 +16,7 @@
           tag: "h2",
           url: "#getting-started",
           text: "Getting Started",
-          icon: false,
+          icon: "none",
           attributes: {
             class: [
               "u-bolt-margin-bottom-xsmall",
@@ -37,7 +37,7 @@
         tag: "h2",
         url: "#usage",
         text: "Usage",
-        icon: false,
+        icon: "none",
         attributes: {
           class: [
             "u-bolt-margin-bottom-xsmall",
@@ -56,7 +56,7 @@
         tag: "h2",
         url: "#schema",
         text: "Schema",
-        icon: false,
+        icon: "none",
         attributes: {
           class: [
             "u-bolt-margin-bottom-xsmall",
@@ -77,7 +77,7 @@
         tag: "h2",
         url: "#helpful-links",
         text: "Helpful Links",
-        icon: false,
+        icon: "none",
         attributes: {
           class: [
             "u-bolt-margin-bottom-xsmall",
@@ -105,7 +105,7 @@
                 ],
                 'data-scroll-offset': 70
               },
-              icon: false,
+              icon: "none",
             } only %}
           </li>
         {% endfor %}
@@ -141,7 +141,7 @@
                     "u-bolt-margin-bottom-none"
                   ]
                 },
-                icon: false,
+                icon: "none",
               } only %}
             </li>
           {% endif %}
@@ -169,7 +169,7 @@
                     "u-bolt-margin-bottom-none"
                   ]
                 },
-                icon: false,
+                icon: "none",
               } only %}
             </li>
           {% endif %}
@@ -198,7 +198,7 @@
                     "u-bolt-margin-bottom-none"
                   ]
                 },
-                icon: false,
+                icon: "none",
               } only %}
             </li>
           {% endif %}
@@ -227,7 +227,7 @@
                     "u-bolt-margin-bottom-none"
                   ]
                 },
-                icon: false,
+                icon: "none",
               } only %}
             </li>
           {% endif %}
