--- a/packages/components/bolt-card/src/card.twig
+++ b/packages/components/bolt-card/src/card.twig
@@ -1,5 +1,9 @@
 {% set schema = bolt.data.components['@bolt-components-card'].schema %}
 
+{% if enable_json_schema_validation %}
+  {{ validate_data_schema(schema, _self) | raw }}
+{% endif %}
+
 {% set tags = ["div", "article", "section", "figure"] %} {# Available overall container tags #}
 {% set contentTags = ["div", "article", "section", "figcaption"] %} {# Available content container tags #}
 {% set themes = ["xlight", "light", "dark", "xdark"] %}
@@ -177,8 +181,3 @@
     {% endif %}
   </{{ tag }}>
 </bolt-card>
-
-
-{% if enable_json_schema_validation %}
-  {{ validate_data_schema(bolt.data.components['@bolt-components-card'].schema, _self) | raw }}
-{% endif %}
