hotfix: revert z-index CSS change from the hotfix yesterday; update the Bolt video player Twig config to manually disable the resizeManager option in Brightcove. Addresses the Safari for iOS issue in production with background-embedded video player preventing UI elements on top from being interacted with.

--- a/packages/components/bolt-video/src/_video-tag.twig
+++ b/packages/components/bolt-video/src/_video-tag.twig
@@ -18,7 +18,7 @@
 {% endif #}
 
 {# force HTML5 Only Rendering #}
-{% set attributes = attributes.setAttribute("data-setup", '{"techOrder": ["Html5"]}') %}
+{% set attributes = attributes.setAttribute("data-setup", '{"techOrder": ["Html5"], "resizeManager": false}') %}
 {% set showMeta = showMeta is null ? true : showMeta %}
 {% set showMetaTitle = showMeta is null ? false : showMetaTitle %}
 
