feat: update nav-indicator, nav-priority, navlink colors and styles

--- a/packages/components/bolt-nav-indicator/nav-indicator.scss
+++ b/packages/components/bolt-nav-indicator/nav-indicator.scss
@@ -4,8 +4,8 @@
 
 @import '@bolt/core';
 
-$bolt-nav-indicator-border-color: var(--bolt-theme-text, currentColor);
-$bolt-nav-indicator-border-size: 2px;
+$bolt-nav-indicator-border-color: var(--bolt-theme-primary, inherit);
+$bolt-nav-indicator-border-size: 4px;
 $bolt-nav-indicator-border-transition-ease: ease;
 $bolt-nav-indicator-border-transition-timing: $bolt-transition-timing / 2;
 
