fix: update band transition to animate min-height only. fixes perceived delay when resizing page width

--- a/packages/components/bolt-band/src/band.scss
+++ b/packages/components/bolt-band/src/band.scss
@@ -44,7 +44,7 @@ bolt-band {
   display: block;
   display: flex; // So children increase in height
   width: 100%;
-  transition: all 0.3s ease;
+  transition: min-height 0.3s ease;
   max-height: none;
   min-height: 0;
   transform: translate3d(0, 0, 0);
