feat: color enhancements for navlink, nav-priority, nav-indicator

--- a/apps/pattern-lab/src/_patterns/04-pages/90-content-hub/anchor-ribbon-example.twig
+++ b/apps/pattern-lab/src/_patterns/04-pages/90-content-hub/anchor-ribbon-example.twig
@@ -67,7 +67,7 @@
   {% block sticky_content %}
 
     {% include "@bolt-components-navbar/navbar.twig" with {
-        theme: "xlight",
+        theme: "xdark",
         center: true,
         title: {
           "tag": "h2",
