--- a/packages/components/bolt-nav-priority/nav-priority.scss
+++ b/packages/components/bolt-nav-priority/nav-priority.scss
@@ -190,7 +190,7 @@ bolt-nav-priority {
 .c-bolt-nav-priority__dropdown {
   @include bolt-z-index(tooltip);
   box-shadow: 0 1px 2px 1px rgba(6, 10, 36, 0.1);
-  min-width: 12em;
+  min-width: 12rem;
   display: none;
   position: absolute;
   top: 100%;
@@ -257,7 +257,12 @@ bolt-nav-priority {
 
 .c-bolt-nav-priority__show-button {
   @include bolt-padding(small, squished);
-  border: 0;
+  // Added border so that &:after,&:focus doesn't change the size of the band
+  // We should consider making this thin dotted style a mixin to share with nav-priority
+  border-width: thin;
+  border-style: dotted;
+  border-radius: 3px;
+  border-color: transparent;
   border-radius: $bolt-border-radius;
   white-space: nowrap;
   transition: background-color 0.3s ease;
@@ -334,6 +339,12 @@ bolt-nav-priority {
       opacity: 0.1;
     }
   }
+
+  &:focus,
+  &.is-active {
+    outline: none;
+    border-color: var(--bolt-theme-primary,inherit);
+    }
 
   &.is-active,
   &:active {
