--- a/packages/components/bolt-video/src/video.scss
+++ b/packages/components/bolt-video/src/video.scss
@@ -6,6 +6,8 @@
 
 // Same as max-width of wrapper container
 $bolt-video-wrapper--max-width: bolt-breakpoint(xxlarge);
+$bolt-video-background-color: rgba(22, 26, 60, .8);
+$bolt-video-background-max-height: 50.625vw;
 
 
 #{$bolt-namespace}-video {
@@ -29,18 +31,19 @@ $bolt-video-wrapper--max-width: bolt-breakpoint(xxlarge);
     flex-grow: 1;
     z-index: 20;
     transition: opacity .3s ease, min-height .3s ease;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    margin-left: auto;
-    margin-right: auto;
-    position: absolute;
     min-width: 100%;
     max-width: none;
-    background-color: rgba(22, 26, 60, .8);
+    background-color: $bolt-video-background-color;
     pointer-events: none;
     opacity: 0;
+
+    height: calc((90vw * (9 / 16)) - 4rem);
+    max-width: 100vh;
+    max-height: 56.25vh;
+
+    @media (max-width: (bolt-breakpoint(small) - 1px)) {
+      min-height: calc(#{$bolt-video-background-max-height} + 2.5rem);
+    }
 
     .is-expanded & {
       opacity: 1;
@@ -52,9 +55,14 @@ $bolt-video-wrapper--max-width: bolt-breakpoint(xxlarge);
       min-width: 0;
       width: 100%;
       background-color: transparent;
-      transition: all .4s ease;
       width: 100%;
       height: 100%;
+      position: relative;
+      pointer-events: none;
+
+      .is-expanded & {
+        pointer-events: auto;
+      }
 
       &:not(.vjs-fullscreen) {
         max-width: 1400px;
@@ -70,21 +78,11 @@ $bolt-video-wrapper--max-width: bolt-breakpoint(xxlarge);
   * on Windows
   */
 .c-#{$bolt-namespace}-video {
-
   width: 100%;
   max-width: none;
   z-index: bolt-z-index('tooltip');
   transition: transform .4s cubic-bezier(.645, 0, .355, 1);
 
-  .video-js {
-    width: 100%;
-    height: 100%;
-  }
-
-  // Higher specificity required to prevent override from Hapyak's CSS loaded
-  .video-js.video-js.video-js {
-    position: absolute;
-  }
 
   &.c-#{$bolt-namespace}-video--background {
     display: block;
@@ -92,18 +90,17 @@ $bolt-video-wrapper--max-width: bolt-breakpoint(xxlarge);
     max-width: calc(100% - #{bolt-spacing(large)});
     max-height: 100%;
     margin: 0 auto;
-    height: 100%;
+    height: $bolt-video-background-max-height;
 
     @media (max-width: (bolt-breakpoint(small) - 1px)) {
-      max-height: calc(100% - 40px);
+      max-width: calc(100vw - 40px);
     }
 
     @include respond-to(small){
-      max-width: calc(100vw - #{bolt-spacing(large) * 2});
-    }
-
-    @media screen and (min-width: 1400px){
-      max-width: calc(1400px - #{bolt-spacing(large) * 2});
+      max-width: 100vh;
+      max-height: 56.25vh;
+      width: calc(90vw - 7rem);
+      height: calc((90vw * (9 / 16)) - 4rem);
     }
   }
 }
@@ -147,10 +144,12 @@ $bolt-video-wrapper--max-width: bolt-breakpoint(xxlarge);
 
 .c-#{$bolt-namespace}-video__close-button--icon-to-text {
   @media (max-width: (bolt-breakpoint(small) - 1px)) {
+    @include bolt-padding(xsmall 0);
+    top: 0;
     display: block;
     position: relative;
     right: 0;
-    text-align: right;
+    float: right;
     .c-#{$bolt-namespace}-video__close-button-icon {
       display: none;
     }
