--- a/packages/components/bolt-navlink/navlink.scss
+++ b/packages/components/bolt-navlink/navlink.scss
@@ -98,7 +98,7 @@ bolt-navlink {
     }
   }
 
-
+    // works in chrome only
   &:focus:not(:active) {
     outline: none;
     border-color: inherit;
