fix: fix action blocks (BDS-291)
- `center` is an undefined variable, you meant to pass the string "center"
- true and false are booleans, not strings!

--- a/apps/pattern-lab/src/_patterns/02-components/action-blocks/15-action-blocks-max-items-per-row-variation.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/action-blocks/15-action-blocks-max-items-per-row-variation.twig
@@ -3,7 +3,7 @@
 {% for max in maxRows %}
   <p>Max items per row: {{ max }}</p>
     {% include "@bolt-components-action-blocks/action-blocks.twig" with {
-      align: center,
+      align: "center",
       maxItemsPerRow: max,
       contentItems: [
         {
