--- a/apps/pattern-lab/src/_patterns/02-components/action-blocks/20-action-blocks-theme-variation.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/action-blocks/20-action-blocks-theme-variation.twig
@@ -6,7 +6,7 @@
     {% block demo_content %}
       {% include "@bolt-components-action-blocks/action-blocks.twig" with {
         theme: theme,
-        align: center,
+        align: "center",
         maxItemsPerRow: 4,
         contentItems: [
           {
