fix: fix band schema (BDS-291)
If there are no buttons, pass an empty array, not "null"

--- a/packages/components/bolt-card/src/card.twig
+++ b/packages/components/bolt-card/src/card.twig
@@ -54,7 +54,7 @@
         {% endfor %}
 
         {% set item = item | merge({
-          "buttons": null
+          "buttons": []
         }) %}
       {% endif %}
 
@@ -72,7 +72,7 @@
         {% set button = button | merge({ "pattern": "button" }) %}
         {% set _items = _items | merge([button]) %}
       {% endfor %}
-      {% set item = item | merge({ "buttons": null }) %}
+      {% set item = item | merge({ "buttons": [] }) %}
     {% endif %}
   {% endif %}
 
