--- a/packages/components/bolt-card/src/card-w-teaser.twig
+++ b/packages/components/bolt-card/src/card-w-teaser.twig
@@ -13,7 +13,7 @@
     {% set cardBodyContent = teaser %}
     {% if teaser.buttons %}
       {% set cardBodyContent = cardBodyContent|merge({
-        buttons: null
+        buttons: []
        }) %}
     {% endif %}
 
