--- a/apps/pattern-lab/src/_patterns/02-components/blockquote/10-blockquote-alignItems-variation.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/blockquote/10-blockquote-alignItems-variation.twig
@@ -5,7 +5,7 @@
   {% include "@bolt-components-blockquote/blockquote.twig" with {
     alignItems: alignItems,
     logo: {
-      invert: "true",
+      invert: true,
       src: "/pattern-lab/images/content/logos/logo-paypal.svg"
     },
     content: "<p>The greater danger for most of us lies not in setting our aim too high and falling short; but in setting our aim too low, and achieving our mark.</p>",
