--- a/apps/pattern-lab/src/_patterns/02-components/blockquote/15-blockquote-indent-variation.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/blockquote/15-blockquote-indent-variation.twig
@@ -1,9 +1,20 @@
 {% set schema = bolt.data.components['@bolt-components-blockquote'].schema %}
+{% set booleans = [
+    {
+      label: "True",
+      value: true
+    },
+    {
+      label: "False",
+      value: false
+    }
+  ]
+%}
 
-{% for indent in schema.properties.indent.enum %}
-  <p>Indent: {{ indent }}</p>
+{% for boolean in booleans %}
+  <p>Indent: {{ boolean.label }}</p>
   {% include '@bolt-components-blockquote/blockquote.twig' with {
-    indent: indent == 'true',
+    indent: boolean.value,
     author: {
       name: "Michelangelo di Lodovico Buonarroti Simoni",
       title: "Renaissance Artist"
