fix: fix icon schema validation (BDS-291)
Do not pass null color value to icon component

--- a/apps/pattern-lab/src/_patterns/02-components/icon/15-icon-theme-background-shape-variations.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/icon/15-icon-theme-background-shape-variations.twig
@@ -16,12 +16,17 @@
       {% for background in exampleBackgrounds %}
         {% for color in exampleColors %}
           <li>
-            {% include "@bolt-components-icon/icon.twig" with {
+            {% set iconVars = {
               name: "add-open",
               background: background,
-              size: "xlarge",
-              color: color
-            } only %}
+              size: "xlarge"
+            } %}
+
+            {% if color %}
+              {% set iconVars = iconVars | merge({color: color}) %}
+            {% endif %}
+
+            {% include "@bolt-components-icon/icon.twig" with iconVars only %}
             <br />{{ background ? "Background: " ~ background : '' }}
             <br />{{ color ? "Color: " ~ color : '' }}
           </li>
@@ -51,12 +56,17 @@ size: 'xlarge'
       {% for background in exampleBackgrounds %}
         {% for color in exampleColors %}
           <li>
-            {% include "@bolt-components-icon/icon.twig" with {
-            name: "add-open",
-            background: background,
-            size: "xlarge",
-            color: color
-            } only %}
+            {% set iconVars = {
+              name: "add-open",
+              background: background,
+              size: "xlarge"
+            } %}
+
+            {% if color %}
+              {% set iconVars = iconVars | merge({color: color}) %}
+            {% endif %}
+
+            {% include "@bolt-components-icon/icon.twig" with iconVars only %}
             <br />{{ background ? "Background: " ~ background : '' }}
             <br />{{ color ? "Color: " ~ color : '' }}
           </li>
