fix: fix typography schema validation (BDS-291)
Do not pass 'false' icon value to link component

--- a/packages/components/bolt-headline/src/_typography.twig
+++ b/packages/components/bolt-headline/src/_typography.twig
@@ -85,12 +85,17 @@
   {% endif %}
 
   {% if url %}
-    {% include "@bolt/link.twig" with {
+    {% set linkVars = {
       text: text,
-      icon: icon,
       url: url,
       isHeadline: (type == "text")
-    } only %}
+    } %}
+
+    {% if icon %}
+      {% set linkVars = linkVars | merge({ icon: icon }) %}
+    {% endif %}
+
+    {% include "@bolt/link.twig" with linkVars only %}
   {% else %}
     {{ text }}
   {% endif %}
