chore: 1st pass merging in video player fixes on the release/1.x branch with the recent video player enhancements.

--- a/packages/components/bolt-video/src/_videojs-enhancements.scss
+++ b/packages/components/bolt-video/src/_videojs-enhancements.scss
@@ -24,9 +24,8 @@ $bolt-video-js-button-shadow-level: 'level-30';
 }
 
 .video-js {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  width: 100%;
+  height: 100%;
 
   video,
   .vjs-big-play-button {
