Dropdown Regression - Replaced old twig reference with correct new ref

--- a/apps/pattern-lab/src/_patterns/02-components/dropdown/00-dropdown-docs.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/dropdown/00-dropdown-docs.twig
@@ -7,7 +7,7 @@ Via Twig
   collapse: true
 } %}
   {% block content %}
-    {% include "@bolt-components-nav/nav.twig" with {
+    {% include "@bolt-components-nav-priority/nav-priority.twig" with {
       "links": [
         {
         "text": "Link 1 Text",
@@ -32,7 +32,7 @@ Via Web Component and Twig
 &lt;bolt-dropdown
   title="Custom Element w/ Collapse &amp; Center"
 &gt;
-  {% include "@bolt-components-nav/nav.twig" with {
+  {% include "@bolt-components-nav-priority/nav-priority.twig" with {
     "links": [
       {
         "text": "Link 1 Text",
