--- a/apps/pattern-lab/src/_patterns/02-components/dropdown/05-dropdown.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/dropdown/05-dropdown.twig
@@ -2,7 +2,7 @@
   title: "Toggle Menu"
 } %}
   {% block content %}
-    {% include "@bolt-components-nav/nav.twig" with {
+    {% include "@bolt-components-nav-priority/nav-priority.twig" with {
       "links": [
         {
           "text": "Link 1 Text",
