--- a/apps/pattern-lab/src/_patterns/02-components/dropdown/25-dropdown-long-header.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/dropdown/25-dropdown-long-header.twig
@@ -3,7 +3,7 @@
   center: true
 } %}
   {% block content %}
-    {% include "@bolt-components-nav/nav.twig" with {
+    {% include "@bolt-components-nav-priority/nav-priority.twig" with {
       "links": [
         {
           "text": "Link 1 Text",
