--- a/apps/pattern-lab/src/_patterns/02-components/dropdown/30-dropdown-custom-element-demo-collection.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/dropdown/30-dropdown-custom-element-demo-collection.twig
@@ -10,7 +10,7 @@
 <bolt-dropdown
   title="Toggle Menu"
 >
-  {% include "@bolt-components-nav/nav.twig" with {
+  {% include "@bolt-components-nav-priority/nav-priority.twig" with {
     "links": [
       {
         "text": "Link 1 Text",
@@ -53,7 +53,7 @@
   center
   title="Custom Element w/ Center"
 >
-  {% include "@bolt-components-nav/nav.twig" with {
+  {% include "@bolt-components-nav-priority/nav-priority.twig" with {
     "links": [
       {
         "text": "Link 1 Text",
@@ -96,7 +96,7 @@
   collapse
   title="Custom Element w/ Collapse"
 >
-  {% include "@bolt-components-nav/nav.twig" with {
+  {% include "@bolt-components-nav-priority/nav-priority.twig" with {
     "links": [
       {
         "text": "Link 1 Text",
@@ -140,7 +140,7 @@
   collapse
   title="Custom Element w/ Collapse & Center"
 >
-  {% include "@bolt-components-nav/nav.twig" with {
+  {% include "@bolt-components-nav-priority/nav-priority.twig" with {
     "links": [
       {
         "text": "Link 1 Text",
@@ -185,7 +185,7 @@
       title="Toggle Menu"
       center
     >
-      {% include "@bolt-components-nav/nav.twig" with {
+      {% include "@bolt-components-nav-priority/nav-priority.twig" with {
         "links": [
           {
             "text": "Features",
@@ -213,7 +213,7 @@
 <bolt-dropdown
   center
   title="Really Extremely Long Example Header Text Example">
-  {% include "@bolt-components-nav/nav.twig" with {
+  {% include "@bolt-components-nav-priority/nav-priority.twig" with {
     "links": [
       {
         "text": "Link 1 Text",
