--- a/apps/pattern-lab/src/_patterns/02-components/dropdown/-30-dropdown-sticky.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/dropdown/-30-dropdown-sticky.twig
@@ -8,7 +8,7 @@
       title: "Toggle Menu"
     } %}
       {% block content %}
-        {% include "@bolt-components-nav/nav.twig" with {
+        {% include "@bolt-components-nav-priority/nav-priority.twig" with {
           "links": [
             {
               "text": "Link 1 Text",
