--- a/apps/pattern-lab/src/_patterns/02-components/dropdown/16-dropdown-collapse-center.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/dropdown/16-dropdown-collapse-center.twig
@@ -4,7 +4,7 @@
   collaspe: true
 } %}
   {% block content %}
-    {% include "@bolt-components-nav/nav.twig" with {
+    {% include "@bolt-components-nav-priority/nav-priority.twig" with {
       "links": [
         {
           "text": "Link 1 Text",
