--- a/apps/pattern-lab/src/_patterns/02-components/dropdown/20-dropdown-theme-variations.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/dropdown/20-dropdown-theme-variations.twig
@@ -13,7 +13,7 @@
       center: true
     } %}
       {% block content %}
-        {% include "@bolt-components-nav/nav.twig" with {
+        {% include "@bolt-components-nav-priority/nav-priority.twig" with {
           "links": [
             {
               "text": "Features",
