--- a/apps/pattern-lab/src/_patterns/02-components/text/30-text-quoted.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/text/30-text-quoted.twig
@@ -1,3 +1,5 @@
+{% set schema = bolt.data.components['@bolt-components-text'].schema %}
+
 {% include "@bolt-components-text/text.twig" with {
   text: "What we do at Pega is brilliant!",
   headline: true,
