--- a/apps/pattern-lab/src/_patterns/02-components/text/05-text.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/text/05-text.twig
@@ -1,15 +1,157 @@
-{% include "@bolt-components-text/text.twig" with {
-  text: "This is eyebrow text",
-  eyebrow: true
-} only %}
-{% include "@bolt-components-text/text.twig" with {
-  text: "Headline: Here is some text",
-  headline: true
-} only %}
-{% include "@bolt-components-text/text.twig" with {
-  text: "Here is some subheadline text",
-  subheadline: true
-} only %}
-{% include "@bolt-components-text/text.twig" with {
-  text: "This is simple text for a simple example"
-} only %}
+{% set schema = bolt.data.components['@bolt-components-text'].schema %}
+
+<div style="max-width: 66ch;">
+
+  <h3>Headlines</h3>
+
+  {% set headlines %}
+    {% include "@bolt-components-text/text.twig" with {
+      text: "This Is the XXXLarge Headline",
+      headline: true,
+      fontSize: "xxxlarge"
+    } only %}
+    {% include "@bolt-components-text/text.twig" with {
+      text: "This Is the XXLarge Headline",
+      headline: true,
+      fontSize: "xxlarge"
+    } only %}
+    {% include "@bolt-components-text/text.twig" with {
+      text: "This Is the XLarge Headline",
+      headline: true,
+      fontSize: "xlarge"
+    } only %}
+    {% include "@bolt-components-text/text.twig" with {
+      text: "This Is the Large Headline",
+      headline: true,
+      fontSize: "large"
+    } only %}
+    {% include "@bolt-components-text/text.twig" with {
+      text: "This Is the Small Headline",
+      headline: true,
+      fontSize: "small"
+    } only %}
+    {% include "@bolt-components-text/text.twig" with {
+      text: "This Is the XSmall Headline",
+      headline: true,
+      fontSize: "xsmall",
+      transform: "uppercase",
+      letterSpacing: "wide"
+    } only %}
+  {% endset %}
+
+  <figure class="u-bolt-margin-bottom-medium">
+    {% include "@bolt-components-band/band.twig" with {
+      theme: "xlight",
+      size: "small",
+      fullBleed: false,
+      content: headlines
+    } only %}
+  </figure>
+
+
+  <h3>Subheadlines</h3>
+
+  {% set subheadlines %}
+    {% include "@bolt-components-text/text.twig" with {
+      text: "This Is the XXLarge Subheadline",
+      subheadline: true,
+      fontSize: "xxlarge"
+    } only %}
+    {% include "@bolt-components-text/text.twig" with {
+      text: "This Is the XLarge Subheadline",
+      subheadline: true,
+      fontSize: "xlarge"
+    } only %}
+    {% include "@bolt-components-text/text.twig" with {
+      text: "This Is the Large Subheadline",
+      subheadline: true,
+      fontSize: "large"
+    } only %}
+  {% endset %}
+
+  <figure class="u-bolt-margin-bottom-medium">
+    {% include "@bolt-components-band/band.twig" with {
+      theme: "xlight",
+      size: "small",
+      fullBleed: false,
+      content: subheadlines
+    } only %}
+  </figure>
+
+
+  <h3>Eyebrow</h3>
+
+  {% set eyebrow %}
+    {% include "@bolt-components-text/text.twig" with {
+      text: "This Is the Eyebrow",
+      eyebrow: true
+    } only %}
+  {% endset %}
+
+  <figure class="u-bolt-margin-bottom-medium">
+    {% include "@bolt-components-band/band.twig" with {
+      theme: "xlight",
+      size: "small",
+      fullBleed: false,
+      content: eyebrow
+    } only %}
+  </figure>
+
+
+  <h3>Paragraph</h3>
+
+  {% set paragraph %}
+    {% include "@bolt-components-text/text.twig" with {
+      text: "This is regular text in a paragraph. You can make a word <em>italic</em> or <strong>bold</strong>, because text can be displayed inline or block."
+    } only %}
+    {% include "@bolt-components-text/text.twig" with {
+      text: "The entire paragraph can be italic.",
+      italic: true
+    } only %}
+    {% include "@bolt-components-text/text.twig" with {
+      text: "The entire paragraph can be bold.",
+      fontWeight: "bold"
+    } only %}
+  {% endset %}
+
+  <figure class="u-bolt-margin-bottom-medium">
+    {% include "@bolt-components-band/band.twig" with {
+      theme: "xlight",
+      size: "small",
+      fullBleed: false,
+      content: paragraph
+    } only %}
+  </figure>
+
+
+  <h3>Example Lockup</h3>
+
+  {% set exampleLockup %}
+    {% include "@bolt-components-text/text.twig" with {
+      text: "This is an eyebrow",
+      eyebrow: true
+    } only %}
+    {% include "@bolt-components-text/text.twig" with {
+      text: "This is a headline",
+      headline: true,
+      fontSize: "xxxlarge"
+    } only %}
+    {% include "@bolt-components-text/text.twig" with {
+      text: "This is a subheadline",
+      subheadline: true,
+      fontSize: "xxlarge"
+    } only %}
+    {% include "@bolt-components-text/text.twig" with {
+      text: "This is regular text, and some lorem ipsum. Duis aliquet egestas purus in blandit. Curabitur vulputate, ligula lacinia scelerisque tempor, lacus lacus ornare ante."
+    } only %}
+  {% endset %}
+
+  <figure>
+    {% include "@bolt-components-band/band.twig" with {
+      theme: "light",
+      fullBleed: false,
+      content: exampleLockup
+    } only %}
+  </figure>
+
+</div>
