--- a/apps/pattern-lab/src/_patterns/02-components/text/10-text-tag-variations.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/text/10-text-tag-variations.twig
@@ -1,22 +1,11 @@
-{% set headingExamples = {
-  h1: "xxxlarge",
-  h2: "xxlarge",
-  h3: "xlarge",
-  h4: "large",
-  h5: "medium",
-  h6: "small",
-  p: "small",
-  span: "xsmall",
-  cite: "xsmall",
-  div: "xsmall",
-} %}
+{% set schema = bolt.data.components['@bolt-components-text'].schema %}
 
-{% for tag, heading in headingExamples %}
-  <p>{{ tag|upper }}</p>
-  {% include "@bolt-components-text/text.twig" with {
-    headline: true,
-    text: "This is an example of " ~ tag|upper ~ " with " ~ heading ~ " font size",
-    tag: tag,
-    fontSize: heading
-  } only %}
+{% for tag in schema.properties.tag.enum %}
+  <p class="u-bolt-margin-bottom-xsmall"><code>{{ tag }}</code></p>
+  <figure class="u-bolt-margin-bottom-medium">
+    {% include "@bolt-components-text/text.twig" with {
+      text: "This is regular text using " ~ tag ~ " tag",
+      tag: tag
+    } only %}
+  </figure>
 {% endfor %}
