--- a/apps/pattern-lab/src/_patterns/02-components/text/20-text-align-variations.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/text/20-text-align-variations.twig
@@ -1,12 +1,8 @@
 {% set schema = bolt.data.components['@bolt-components-text'].schema %}
 
 {% for align in schema.properties.align.enum %}
-  <p>Align: {{ align|capitalize }}</p>
   {% include "@bolt-components-text/text.twig" with {
-    text: "This is an example of align " ~ align,
-    headline: true,
-    tag: "h2",
-    fontSize: "xxlarge",
+    text: "This is regular text using " ~ align ~ " align",
     align: align
   } only %}
 {% endfor %}
