--- a/packages/components/bolt-text/src/text.scss
+++ b/packages/components/bolt-text/src/text.scss
@@ -51,126 +51,127 @@ bolt-text {
     @include bolt-margin-bottom(xxlarge);
   }
   &:last-child {
-    margin-bottom: 0;
+    @include bolt-margin-bottom(0);
   }
 }
 
-$bolt-text--minus-letter-spacing: -0.025rem;
-$bolt-text--plus-letter-spacing: 0.05rem;
+$bolt-text-v2--minus-letter-spacing: -0.025rem;
+$bolt-text-v2--plus-letter-spacing: 0.05rem;
 
-.c-bolt-text {
-  margin: 0;
-  padding: 0;
+.c-bolt-text-v2 {
+  @include bolt-margin(0);
+  @include bolt-padding(0);
 
-  a:link, a:visited {
-    color: inherit;
-    color: var(--bolt-theme-link-default,var(--bolt-theme-link,#545da6));
-    text-decoration: none;
-  }
-  a:active {
-    color: inherit;
-    color: var(--bolt-theme-link-active,var(--bolt-theme-link,#545da6));
-  }
-  a:hover, a:focus {
-    color: inherit;
-    color: var(--bolt-theme-link-hover,var(--bolt-theme-link,#545da6));
-    text-decoration: underline;
-  }
+  a {
+    opacity: 1;
+    transition: all $bolt-transition;
 
-  &.c-bolt-text--body {
-    a:link, a:visited {
+    &:link,
+    &:visited {
+      color: inherit;
+      color: var(--bolt-theme-link, inherit);
       text-decoration: underline;
     }
-    a:hover {
+
+    &:hover {
+      opacity: $bolt-global-link-hover-opacity;
+    }
+
+    &:active,
+    &:focus:active {
+      opacity: $bolt-global-link-active-opacity;
+    }
+  }
+
+  &.c-bolt-text-v2--headline {
+    a:link,
+    a:visited {
       text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
     }
   }
 }
 
-.c-bolt-text {
+.c-bolt-text-v2 {
   // Font-Family
   &--headline {
-    @include bolt-font-family('heading');
+    @include bolt-font-family(heading);
   }
   &--body {
-    @include bolt-font-family('body');
+    @include bolt-font-family(body);
   }
   &--code {
-    @include bolt-font-family('code');
+    @include bolt-font-family(code);
   }
 
   // Color
-  &--theme-headline-text-color {
+  &--color-theme-headline {
     color: inherit;
     color: var(--bolt-theme-heading, inherit);
   }
-  &--theme-body-text-color {
+  &--color-theme-body {
     color: inherit;
     color: var(--bolt-theme-body, inherit);
   }
-  &--theme-code-text-color {
-    color: inherit;
-    color: var(--bolt-theme-code, inherit);
-  }
 
   // Font Weight Options
-  &--weight-semibold {
+  &--font-weight-semibold {
     @include bolt-font-weight(semibold);
   }
-  &--weight-regular {
+  &--font-weight-regular {
     @include bolt-font-weight(regular);
   }
-  &--weight-bold {
+  &--font-weight-bold {
     @include bolt-font-weight(bold);
   }
 
-  // Font style variations
-  &--style-normal {
-    font-style: normal;
-  }
-  &--style-italic {
+  // Italic style
+  &--italic {
     font-style: italic;
   }
 
   // Font size
-  &--font-xxxlarge {
+  &--font-size-xxxlarge {
     @include bolt-font-size(xxxlarge);
-    letter-spacing: $bolt-text--minus-letter-spacing;
+    letter-spacing: $bolt-text-v2--minus-letter-spacing;
 
-    &.long-title {
+    &.is-long {
       font-size: $bolt-font-size--xxxlarge--min;
     }
   }
-  &--font-xxlarge {
+  &--font-size-xxlarge {
     @include bolt-font-size(xxlarge);
-    letter-spacing: $bolt-text--minus-letter-spacing;
+    letter-spacing: $bolt-text-v2--minus-letter-spacing;
   }
-  &--font-xlarge {
+  &--font-size-xlarge {
     @include bolt-font-size(xlarge);
   }
-  &--font-large {
+  &--font-size-large {
     @include bolt-font-size(large);
   }
-  &--font-medium {
+  &--font-size-medium {
     @include bolt-font-size(medium);
   }
-  &--font-small {
+  &--font-size-small {
     @include bolt-font-size(small);
-    letter-spacing: $bolt-text--plus-letter-spacing;
+    letter-spacing: $bolt-text-v2--plus-letter-spacing;
   }
-  &--font-xsmall {
+  &--font-size-xsmall {
     @include bolt-font-size(xsmall);
-    letter-spacing: $bolt-text--plus-letter-spacing;
+    letter-spacing: $bolt-text-v2--plus-letter-spacing;
   }
 
   // Display type
-  &--display-inline {
+  &--inline {
     display: inline;
   }
-  &--display-inline-block {
+  &--inline-block {
     display: inline-block;
   }
-  &--display-block {
+  &--block {
     display: block;
   }
 
@@ -198,13 +199,13 @@ $bolt-text--plus-letter-spacing: 0.05rem;
 
   // Letter spacing
   &--letter-spacing-narrow {
-    letter-spacing:  $bolt-text--minus-letter-spacing;
+    letter-spacing:  $bolt-text-v2--minus-letter-spacing;
   }
-  &--letter-spacing-normal {
+  &--letter-spacing-regular {
     letter-spacing: normal;
   }
   &--letter-spacing-wide {
-    letter-spacing:  $bolt-text--plus-letter-spacing;
+    letter-spacing:  $bolt-text-v2--plus-letter-spacing;
   }
 
   // Line height
@@ -213,48 +214,48 @@ $bolt-text--plus-letter-spacing: 0.05rem;
     line-height: $bolt-line-height--tight;
   }
   &--line-height-regular {
-    &.c-bolt-text--font-xxxlarge {
+    &.c-bolt-text-v2--font-size-xxxlarge {
       line-height: $bolt-line-height--xxxlarge;
     }
-    &.c-bolt-text--font-xxlarge {
+    &.c-bolt-text-v2--font-size-xxlarge {
       line-height: $bolt-line-height--xxlarge;
     }
-    &.c-bolt-text--font-xlarge {
+    &.c-bolt-text-v2--font-size-xlarge {
       line-height: $bolt-line-height--xlarge;
     }
-    &.c-bolt-text--font-large {
+    &.c-bolt-text-v2--font-size-large {
       line-height: $bolt-line-height--large;
     }
-    &.c-bolt-text--font-medium {
+    &.c-bolt-text-v2--font-size-medium {
       line-height: $bolt-line-height--medium;
     }
-    &.c-bolt-text--font-small {
+    &.c-bolt-text-v2--font-size-small {
       line-height: $bolt-line-height--small;
     }
-    &.c-bolt-text--font-xsmall {
+    &.c-bolt-text-v2--font-size-xsmall {
       line-height: $bolt-line-height--xsmall;
     }
   }
   &--line-height-loose {
-    &.c-bolt-text--font-xxxlarge {
+    &.c-bolt-text-v2--font-size-xxxlarge {
       line-height: ($bolt-line-height--xxxlarge + $bolt-line-height--add-loose);
     }
-    &.c-bolt-text--font-xxlarge {
+    &.c-bolt-text-v2--font-size-xxlarge {
       line-height: ($bolt-line-height--xxlarge + $bolt-line-height--add-loose);
     }
-    &.c-bolt-text--font-xlarge {
+    &.c-bolt-text-v2--font-size-xlarge {
       line-height: ($bolt-line-height--xlarge + $bolt-line-height--add-loose);
     }
-    &.c-bolt-text--font-large {
+    &.c-bolt-text-v2--font-size-large {
       line-height: ($bolt-line-height--large + $bolt-line-height--add-loose);
     }
-    &.c-bolt-text--font-medium {
+    &.c-bolt-text-v2--font-size-medium {
       line-height: ($bolt-line-height--medium + $bolt-line-height--add-loose);
     }
-    &.c-bolt-text--font-small {
+    &.c-bolt-text-v2--font-size-small {
       line-height: ($bolt-line-height--small + $bolt-line-height--add-loose);
     }
-    &.c-bolt-text--font-xsmall {
+    &.c-bolt-text-v2--font-size-xsmall {
       line-height: ($bolt-line-height--xsmall + $bolt-line-height--add-loose);
     }
   }
@@ -263,10 +264,11 @@ $bolt-text--plus-letter-spacing: 0.05rem;
   &--quoted {
     &:before,
     &:after {
-      font-family: 'Georgia', serif; // TODO: Replace with Noto Serif when it is added.
+      font-family: 'Georgia', serif;
     }
 
     &:before {
+      position: absolute;
       content: '\201C';
       transform: translate3d(-110%, 0, 0);
     }
@@ -298,19 +300,19 @@ $bolt-text--plus-letter-spacing: 0.05rem;
   // @todo: uncomment once icon component decoupled and we can target wrapper around the icon.
   // &.has-icon:not(.has-url) {
 
-  //   &.c-bolt-text--icon-align-left-hang,
-  //   &.c-bolt-text--icon-align-right-hang {
+  //   &.c-bolt-text-v2--icon-align-left-hang,
+  //   &.c-bolt-text-v2--icon-align-right-hang {
   //     display: flex;
   //     justify-content: space-between;
   //   }
-  //   &.c-bolt-text--icon-align-left,
-  //   &.c-bolt-text--icon-align-left-hang {
+  //   &.c-bolt-text-v2--icon-align-left,
+  //   &.c-bolt-text-v2--icon-align-left-hang {
   //     bolt-icon {
   //       margin-right: 0.25rem;
   //     }
   //   }
-  //   &.c-bolt-text--icon-align-right,
-  //   &.c-bolt-text--icon-align-right-hang  {
+  //   &.c-bolt-text-v2--icon-align-right,
+  //   &.c-bolt-text-v2--icon-align-right-hang  {
   //     bolt-icon {
   //       margin-left: 0.25rem;
   //     }
@@ -318,21 +320,21 @@ $bolt-text--plus-letter-spacing: 0.05rem;
   // }
   // &.has-icon.has-url { // If we have an <a> tag we need that to be the flex parent
 
-  //   &.c-bolt-text--icon-align-left-hang,
-  //   &.c-bolt-text--icon-align-right-hang {
+  //   &.c-bolt-text-v2--icon-align-left-hang,
+  //   &.c-bolt-text-v2--icon-align-right-hang {
   //     > a {
   //       display: flex;
   //       justify-content: space-between;
   //     }
   //   }
-  //   &.c-bolt-text--icon-align-left,
-  //   &.c-bolt-text--icon-align-left-hang {
+  //   &.c-bolt-text-v2--icon-align-left,
+  //   &.c-bolt-text-v2--icon-align-left-hang {
   //     > a bolt-icon {
   //       margin-right: 0.25rem;
   //     }
   //   }
-  //   &.c-bolt-text--icon-align-right,
-  //   &.c-bolt-text--icon-align-right-hang {
+  //   &.c-bolt-text-v2--icon-align-right,
+  //   &.c-bolt-text-v2--icon-align-right-hang {
   //     > a bolt-icon {
   //       margin-left: 0.25rem;
   //     }
@@ -340,25 +342,25 @@ $bolt-text--plus-letter-spacing: 0.05rem;
   // }
 
   // &--vertical-align-top.has-icon {
-  //   &.c-bolt-text--font-xxxlarge bolt-icon {
+  //   &.c-bolt-text-v2--font-size-xxxlarge bolt-icon {
   //     margin-top: 0.06em;
   //   }
-  //   &.c-bolt-text--font-xxlarge bolt-icon {
+  //   &.c-bolt-text-v2--font-size-xxlarge bolt-icon {
   //     margin-top: 0.13em;
   //   }
-  //   &.c-bolt-text--font-xlarge bolt-icon {
+  //   &.c-bolt-text-v2--font-size-xlarge bolt-icon {
   //     margin-top: 0.15em;
   //   }
-  //   &.c-bolt-text--font-large bolt-icon {
+  //   &.c-bolt-text-v2--font-size-large bolt-icon {
   //     margin-top: 0.18em;
   //   }
-  //   &.c-bolt-text--font-medium bolt-icon {
+  //   &.c-bolt-text-v2--font-size-medium bolt-icon {
   //     margin-top: 0.3em;
   //   }
-  //   &.c-bolt-text--font-small bolt-icon {
+  //   &.c-bolt-text-v2--font-size-small bolt-icon {
   //     margin-top: 0.25em;
   //   }
-  //   &.c-bolt-text--font-xsmall bolt-icon {
+  //   &.c-bolt-text-v2--font-size-xsmall bolt-icon {
   //     margin-top: 0.15em;
   //   }
   //   bolt-icon {
