feat: enhance focus:not(:active) for firefox and safari

--- a/packages/components/bolt-navlink/navlink.scss
+++ b/packages/components/bolt-navlink/navlink.scss
@@ -46,8 +46,10 @@ bolt-navlink {
   &.is-active {
     color: inherit;
     color: var(--bolt-theme-text, inherit);
+    border-color: transparent;
     opacity: 1;
   }
+
 
   &:before {
     display: block;
