styles: schema consistency and doc updates

--- a/apps/pattern-lab/src/_patterns/02-components/text/-text-display-variations.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/text/-text-display-variations.twig
@@ -6,7 +6,7 @@
     {% include "@bolt-components-text/text.twig" with {
       text: "inline display",
       display: "inline",
-      italic: true
+      fontStyle: italic
     } only %}
   {% endset %}
 
