docs: copy updates

--- a/apps/pattern-lab/src/_patterns/02-components/text/05-text.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/text/05-text.twig
@@ -2,6 +2,9 @@
 
 <div style="max-width: 66ch;">
 
+  <h3>Typographic Design</h3>
+  <p>The following are the official recipes for each piece of our typography. They will cover all common use cases. Only in edge cases, you'd want to break away and create your own recipes.</p>
+
   <h3>Headlines</h3>
 
   {% set headlines %}
