docs: wysiwyg editor demo page

--- a/apps/pattern-lab/src/_patterns/02-components/code-snippet/00-code-snippet-docs.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/code-snippet/00-code-snippet-docs.twig
@@ -3,7 +3,7 @@
 {% verbatim %}{% include "@bolt-components-code-snippet/code-snippet.twig" with {
   "display": "block",
   "lang": "html",
-  "code": "Some code snippet"
+  "content": "Some code snippet"
 } only %}{% endverbatim %}
 {% endset %}
 
