--- a/apps/pattern-lab/src/_patterns/04-pages/95-wysiwyg-editor/00-wysiwyg-kitchen-sink.twig
+++ b/apps/pattern-lab/src/_patterns/04-pages/95-wysiwyg-editor/00-wysiwyg-kitchen-sink.twig
@@ -3,12 +3,55 @@
 {% block main_content %}
   {% set header %}
     {% include "@bolt/headline.twig" with {
-      "text": "Article Elements Kitchen Sink",
+      "text": "WYSIWYG Elements to Bolt Components",
       "size": "xxxlarge",
       "tag": "h1"
     } only %}
   {% endset %}
   {% set article %}
+    <h3>Ideal CKEditor Config</h3>
+    <p>Bolt needs to create an example of CKEditor that can map to web components, and all the related Bolt components need to become web components.</p>
+    {% set ckeditor %}
+ClassicEditor
+  .create( document.querySelector( '#editor' ), {
+    heading: {
+      options: [
+        { model: 'paragraph', view: 'bolt-text', title: 'Paragraph' },
+        { model: 'headline1', view: 'bolt-text', title: 'Headline xxxlarge h1', attributes: { headline: true, font-size: 'xxxlarge', tag: 'h1' } },
+        { model: 'headline2', view: 'bolt-text', title: 'Headline xxlarge h2', attributes: { headline: true, font-size: 'xxlarge', tag: 'h2' } },
+        { model: 'headline3', view: 'bolt-text', title: 'Headline xlarge h3', attributes: { headline: true, font-size: 'xlarge', tag: 'h3' } },
+        { model: 'headline4', view: 'bolt-text', title: 'Headline large h4', attributes: { headline: true, font-size: 'large', tag: 'h4' } },
+        { model: 'headline5', view: 'bolt-text', title: 'Headline small h5', attributes: { headline: true, font-size: 'small', tag: 'h5' } },
+        { model: 'headline6', view: 'bolt-text', title: 'Headline xsmall h6', attributes: { headline: true, font-size: 'xsmall', tag: 'h6' } },
+        { model: 'subheadline1', view: 'bolt-text', title: 'Subheadline xxlarge', attributes: { subheadline: true, font-size: 'xxlarge', tag: 'p' } },
+        { model: 'subheadline2', view: 'bolt-text', title: 'Subheadline xlarge', attributes: { subheadline: true, font-size: 'xlarge', tag: 'p' } },
+        { model: 'subheadline3', view: 'bolt-text', title: 'Subheadline large', attributes: { subheadline: true, font-size: 'large', tag: 'p' } },
+        { model: 'eyebrow', view: 'bolt-text', title: 'Eyebrow', attributes: { eyebrow: true, tag: 'p' } },
+        { model: 'link', view: 'bolt-text', title: 'Link', attributes: { eyebrow: true, tag: 'a' } },
+        { model: 'blockquote', view: 'bolt-blockquote', title: 'Blockquote' },
+        { model: 'ordered-list', view: 'bolt-ordered-list', title: 'Ordered list' },
+        { model: 'unordered-list', view: 'bolt-unordered-list', title: 'Unordered list' },
+        { model: 'code', view: 'bolt-code-snippet', title: 'Code snippet' },
+      ]
+    }
+  } )
+  .then( ... )
+  .catch( ... );
+    {% endset %}
+    <figure class="u-bolt-margin-bottom-medium">
+      {% include "@bolt-components-code-snippet/code-snippet.twig" with {
+        "display": "block",
+        "content": ckeditor
+      } only %}
+    </figure>
+    <h3>CKEditor Docs</h3>
+    <p>
+      <a href="https://github.com/ckeditor/ckeditor-dev/tree/major/plugins">https://github.com/ckeditor/ckeditor-dev/tree/major/plugins</a>
+      <br>
+      <a href="https://docs.ckeditor.com/ckeditor4/latest/guide/dev_acf.html">https://docs.ckeditor.com/ckeditor4/latest/guide/dev_acf.html</a>
+      <br>
+      <a href="https://docs.ckeditor.com/ckeditor4/latest/api/CKEDITOR_config.html#cfg-protectedSource">https://docs.ckeditor.com/ckeditor4/latest/api/CKEDITOR_config.html#cfg-protectedSource</a>
+    </p>
     <h3>Headlines</h3>
     <figure class="u-bolt-margin-bottom-medium">
       {% include "@bolt/headline.twig" with {
@@ -41,21 +84,29 @@
         "text": "Bold text is <strong>strong</strong>.",
         "tag": "p"
       } only %}
+      {% include "@bolt/text.twig" with {
+        "text": "Superscript text is <sup>sup</sup>.",
+        "tag": "p"
+      } only %}
+      {% include "@bolt/text.twig" with {
+        "text": "Subscript text is <sub>sub</sub>.",
+        "tag": "p"
+      } only %}
     </figure>
     <h3>Link</h3>
     <figure class="u-bolt-margin-bottom-medium">
       {% include "@bolt-components-link/link.twig" with {
-        text: "Link is link with default settings.",
+        text: "Link is link component with default settings.",
         url: "http://google.com",
       } only %}
     </figure>
     <h3>Blockquote</h3>
     <figure class="u-bolt-margin-bottom-medium">
       {% include "@bolt-components-blockquote/blockquote.twig" with {
-        "content": "<p>Blockquote is blockquote with default settings.</p>",
+        "content": "<p>Blockquote is blockquote component with default settings.</p>",
       } only %}
     </figure>
-    <h3>Lists</h3>
+    <h3>Ordered List</h3>
     <figure class="u-bolt-margin-bottom-medium">
       {% include "@bolt-components-ordered-list/ordered-list.twig" with {
         "contentItems" : [
@@ -63,23 +114,46 @@
             "text": "Ordered list is"
           },
           {
-            "text": "Ordered list"
+            "text": "Ordered list component"
           },
           {
             "text": "with default settings"
           }
         ]
       } %}
+    </figure>
+    <h3>Unordered List</h3>
+    <figure class="u-bolt-margin-bottom-medium">
       {% include "@bolt-components-unordered-list/unordered-list.twig" with {
         "contentItems" : [
           {
             "text": "Unordered list is"
           },
           {
-            "text": "Unordered list"
+            "text": "Unordered list component"
           },
           {
             "text": "with default settings"
+          }
+        ]
+      } %}
+    </figure>
+    <h3>Code</h3>
+    <figure class="u-bolt-margin-bottom-medium">
+      {% include "@bolt-components-code-snippet/code-snippet.twig" with {
+        "display": "block",
+        "content": "Code text is the Code Snippet component with default settings."
+      } only %}
+    </figure>
+    <h3>Missing in Bolt</h3>
+    <figure>
+      {% include "@bolt-components-ordered-list/ordered-list.twig" with {
+        "contentItems" : [
+          {
+            "text": "Figure (Image and Video): the figure component needs to be styled."
+          },
+          {
+            "text": "Table: table component has not been created."
           }
         ]
       } %}
@@ -94,7 +168,7 @@
     "content": header
   } only %}
   {% include "@bolt/band.twig" with {
-    "theme": "light",
+    "theme": "xlight",
     "content": article
   } only %}
 {% endblock %}
